--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+   "files.autoSave": "onFocusChange",
+    "editor.wrappingColumn": 80,
+   "editor.wrappingIndent": "same",
+    "window.openFilesInNewWindow": false,
+   "editor.tabSize": 3,
+   "window.zoomLevel": 0
 }
