--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/barrycann/hike#readme",
   "dependencies": {
+    "angular-animate": "^1.6.2",
+    "auth0": "^2.6.0",
+    "aws-sdk": "^2.22.0",
     "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.16.1",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -29,6 +33,8 @@
     "gulp-print": "^2.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "massive": "^2.6.0"
+    "massive": "^2.6.0",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0"
   }
 }
