--- a/package.json
+++ b/package.json
@@ -4,35 +4,37 @@
   "description": "A full-featured hiking app for the Wasatch Front",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/server.js"
+
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/barrycann/hike.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Barry Cann",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/barrycann/hike/issues"
   },
   "homepage": "https://github.com/barrycann/hike#readme",
-  "dependencies": {
-    "angular-animate": "^1.6.2",
-    "auth0": "^2.6.0",
-    "aws-sdk": "^2.22.0",
+  "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
-    "body-parser": "^1.16.1",
-    "cors": "^2.8.1",
-    "express": "^4.14.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cachebust": "0.0.6",
     "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.2.1",
     "gulp-print": "^2.0.1",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
+    "gulp-sourcemaps": "^2.4.1"
+  },
+  "dependencies": {
+    "angular-animate": "^1.6.2",
+    "aws-sdk": "^2.22.0",
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.1",
+    "express": "^4.15.2",
+    "express-session": "^1.15.1",
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.0"
